traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:17: error: Missing closing brace `}' assumed here
}
^TraversalByColumn:19: error: expected class or object definition
def fonctionTest() {
^TraversalByColumn:25: error: Missing closing brace `}' assumed here
    res=false
    ^